--- a/src/stylesheets/winerror-simulator.scss
+++ b/src/stylesheets/winerror-simulator.scss
@@ -21,7 +21,7 @@
 .main-link--winerror-simulator {
   .main-link__body {
     background-color: #e9e7d8;
-    background-image: url("/images/windows-xp-wallpaper.jpg");
+    background-image: url("../images/windows-xp-wallpaper.jpg");
     background-position: bottom;
     background-size: cover;
 
